--- a/todo.txt
+++ b/todo.txt
@@ -3,3 +3,6 @@
 - slide promesse
 - es6 ajouter async await ? plutot que des promesses ?
 - ajouter lien if then else en angular
+- schema lifecycle
+- addItemS
+- constantes pour les types d action
