--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
-- supprimer la partie sur saga
+- array destructuring
+- advanced object destructuring
 - ajouter eslint
 - changer stateless component par functional component
 - utiliser react hooks + lint
